# simple-dsp

./: .gitignore  CMakeLists.txt  README.md
doc/: dsp-state-diagram.dia
include/simple-dsp/: addressing.h  algorithm.h  aligneddata.h  alignment.h  arrayops.h  attributes.h  biquad.h  butterworth.h  circular.h  crossoverplan.h  delay.h  denormal.h  dspnode.h  dspruntime.h  frequency.h  frequency.hpp  guards.h  iir.h  integration.h  interface.h  linkwitz-riley-plan.h  lock-fee-owner.hpp  perceptive-rms.h  power2.h  processnode.h  queue.h  sample-frame.h  samplerate.h  spinguard.h  timeout.h
include/simple-dsp/algorithm/: circular.h  power2.h  ranges.h  size.h
include/simple-dsp/core/: addressing.h  algorithm.h  aligneddata.h  alignment.h  arrayops.h  attributes.h  bits.h  bounds.h  circular.h  debug.h  denormal.h  ftz.h  index.h  power2.h  queue.h  size.h  sse.h
include/simple-dsp/iir/: coefficients.h
include/simple-dsp/util/: aligneddata.h  arrayops.h  delay.h  frame.h  guards.h  lock-fee-owner.hpp  queue.h  timeout.h
share/: CodeStyleStlye.xml  cpp-header-file-template.vm
src/simple-dsp/: guards.cc  placeholder.cc
test/: butterworth-tests.cc  circular-tests.cc  crossoverplan-tests.cc  delay-tests.cc  frame-tests.cc  guards-tests.cc  integration-test.cc  integration-tests.cc  interface_tests.cc  lock-free-owner-tests.cc  power2-tests.cc  queue-tests.cc  ranges-tests.cc  samplerate-tests.cc  size-tests.cc  spinguard-tests.cc  test-helper.h  test.cc
